<pre>
2007-07-02:
	* version 0.5
	* vimperator.events.feedkeys("2zi") support for scripts
	* Ctrl-U/Ctrl-D for scrolling the window up/down and the associated
	'scroll' option
	* files in ~/.vimperator/plugin/ are auto-sourced
	* :winopen support (multiple windows still very very experimental)
	* 'activate' option implemented
	* search engines which use POST instead of GET work now
	* :javascript <<EOF uses a better multiline input widget now
	* new :map, :noremap, :mapclear and :unmap commands
	* :saveas finally works (by calmar)
	* Shift-insert pastes the X11 selection content in text fields now
	* Changed "|" to ", " as a url seperator in :open
	* Ctrl-^ mapping for selecting the alternate tab/buffer
	* QuickMarks support (new commands :qmarks/:qmarkadd/:qmarkdel and
	  mappings go{a-z}, gn{a-z} and M{a-z}
	* Multiline echo support
	* Command line is now cleared on most redraws like in vim
	* The RSS feed button in the address bar works again
	* reload/stop buttons update enabled state again
	* added local/url marks support (thanks Viktor Kojouharov)
	* temporary shortcut Y to yank current selection (for non X11-users)
	* Flashing frame with ]f now works as expected
	* many help fixes (most of them by Doug Kearns)
	* new :reloadall command
	* :hardcopy works now and shows the printing dialog
	* changed "R" to reload without cache instead of reload all due to popular request
	* changed secure sites -> green, broken sites -> red in the statusbar
	* Vimperator now sets the window title, so it's "vimperator.mozdev.org -
	  Vimperator" instead of "vimperator.mozdev.org - Mozilla Firefox"
	  Use :set titlestring=... to change it back (help from Hannes Rist)
	* :tabmove command (by Doug Kearns)
	* 'showstatuslinks' option to control where/if we show the destination of
	a hovered link
	* :version! shows firefox version page
	* hovered links appear in the command line again, not statusbar
	* :help now opens in the current tab even for xhtml pages like "about:"