@@ -1,6 +1,7 @@
 <pre>
 2007-07-02:
 	* version 0.5
+	* rename :qmarkadd :qmark and :qmarkdel :delqmarks
 	* vimperator.events.feedkeys("2zi") support for scripts
 	* Ctrl-U/Ctrl-D for scrolling the window up/down and the associated
 	'scroll' option
